# bionemo-framework

./: .gitlab-ci.yml  .gitmodules  .secrets.baseline  404.html  CODEOWNERS  Dockerfile  Dockerfile.arm  README.md  artifact_paths.yaml  index.html  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: postCreateCommand.sh
API_reference/: index.html
SUMMARY/: index.html
assets/images/megatron_background/: index.html
bionemo/model/: utils.py
ci/benchmarks/partial-conv/: esm2_pretrain.yaml
ci/scripts/: build_docker_image.sh
datasets/: index.html
datasets/CELLxGENE/: index.html
datasets/uniprot/: index.html
docs/: CONTRIBUTING.md  mkdocs.yml  requirements.txt
docs/bionemo/: contents.md  next-steps.md
docs/docs/: index.md
docs/docs/Models/: index.md
internal/: run_pytest_fork.sh
internal/esm2nv/: README.md
models/: index.html
models/esm2/: index.html
models/geneformer/: index.html
scripts/: gpt-pretrain.py  hello_world.py
search/: search_index.json
setup/: Dockerfile  requirements-cve.txt  requirements-dev.txt  requirements.txt
sub-packages/bionemo-esm2/: README.md  pyproject.toml
sub-packages/bionemo-example_model/: pyproject.toml
sub-packages/bionemo-geneformer/: README.md  pyproject.toml
sub-packages/bionemo-molmim/: README.md  pyproject.toml
sub-packages/bionemo-molmim/src/bionemo/molmim/: mol_enc_dec_model_base.py  molmim_model.py
sub-packages/bionemo-scdl/: collate_h5ad.ipynb  profile_scdl.py  run_times.ipynb
user-guide/: index.html
user-guide/SUMMARY/: index.html
user-guide/getting-started/: index.html
(+266 files in other folders)
